<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_develop"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="gotz8.disease.Develop"
    android:background="#d0d0d0">
    <LinearLayout
        android:id="@+id/container_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbardev"
            layout="@layout/toolbardev" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dev"
        android:id="@+id/textView22"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:textStyle="normal|bold"
        android:textColor="#FFFFFF" />
    <ImageView

        android:id="@+id/imageView98"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"

        android:layout_marginTop="7dp"
        android:onClick="ClickDev"

        app:srcCompat="@drawable/arrowb1"
        android:contentDescription="@string/dev" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ct1"
        android:layout_below="@+id/container_toolbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Devby"
            android:text="Develop By"
            android:textStyle="bold"
            android:textSize="26sp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" />
        <ImageView
            android:id="@+id/scilogo"
            android:layout_width="249dp"
            android:layout_height="106dp"
            android:layout_below="@+id/Devby"
            android:src="@drawable/sci_b"
            app:layout_constraintLeft_toRightOf="@+id/rmutsb_logo"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/Devby" />

        <ImageView
            android:id="@+id/rmutsb_logo"
            android:layout_width="143dp"
            android:layout_height="105dp"
            android:layout_below="@+id/Devby"
            android:src="@drawable/rmutsb_logo_en"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/Devby" />



    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
        android:id="@+id/ct2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ct1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Manit"
            android:text="@string/Devname1"
            android:textStyle="bold"
            android:textSize="22sp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.621"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/Email2" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Manit"
            android:id="@+id/Email1"
            android:text="@string/Devmail1"
            android:textStyle="bold"
            android:textSize="22sp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.679"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/Manit"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/Nop"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Nop"
            android:text="@string/Devname2"
            android:layout_below="@+id/Email1"
            android:textStyle="bold"
            android:textSize="22sp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.584"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="36dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Nop"
            android:id="@+id/Email2"
            android:text="@string/Devmail2"
            android:textStyle="bold"
            android:textSize="22sp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.596"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/Nop" />

        <ImageView
            android:id="@+id/devp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginLeft="70dp"
            android:layout_marginRight="8dp"
            android:src="@drawable/mg1"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="23dp"
            app:layout_constraintTop_toBottomOf="@+id/Email1" />

        </android.support.constraint.ConstraintLayout>



</RelativeLayout>
